2009-04-16  Jaroslav Hajek  <highegg@gmail.com>

	* xpow.cc (same_sign): New helper function.
	(elem_xpow (double, const Range&), elem_xpow (const Complex&, const Range&)): 
	Only optimize monotonic-magnitude integer ranges, start always from
	the smaller end.

2008-04-11  David Bateman  <dbateman@free.fr>

	* ov-cell.cc (Fstruct2cell): Treat possible trailing singleton for
	creation of cell array from column structure vector.

2009-04-09  Jaroslav Hajek  <highegg@gmail.com>

	* ov-cell.cc (octave_cell::subsasgn): Fix reference counting
	optimization.

2009-04-08  John W. Eaton  <jwe@octave.org>

	* load-path.cc (rehash_internal): New function.
	(Frehash): Use it.
	(Fpath, Faddpath, Frmpath): Call rehash_internal if path is modified.

2009-04-08  Jaroslav Hajek  <highegg@gmail.com>

	* xpow.cc (elem_xpow (double, const Range&),
	elem_xpow (const Complex&, const Range&)): New functions.
	* xpow.h: Declare them.
	* OPERATORS/op-range.cc: Define scalar .^ range and complex .^ range &
	install them.

2009-04-04  Jaroslav Hajek  <highegg@gmail.com>

	* ov-struct.cc (octave_struct::subsasgn): Fix reference counting
	optimization.

2008-04-03  David Bateman  <dbateman@free.fr>

	* DLD-FUNCTIONS/max.cc (MINMAX_SPARSE_BODY): Allow sparse boolean 
	values.

2009-04-01  Jaroslav Hajek  <highegg@gmail.com>

	* ov-str-mat.cc (default_numeric_conversion_function):
	Create an octave_scalar if possible.

2009-03-29  John W. Eaton  <jwe@octave.org>

	* DLD-FUNCTIONS/fltk_backend.cc (plot_window::button_press):
	Don't pass arbitrary input to fl_message as a format string.

2009-03-29  Jaroslav Hajek  <highegg@gmail.com>

	* pt-eval.cc (do_unwind_protect_cleanup_code): Protect also
	octave_interrupt_state.

2009-03-29  Jaroslav Hajek  <highegg@gmail.com>

	* DLD-FUNCTIONS/cellfun.cc (Fcellslices): Index n-d arrays along the
	last dimension.

2009-03-27  Jaroslav Hajek  <highegg@gmail.com>

	* DLD-FUNCTIONS/balance.cc (Fbalance): Fix order of output args.
